UI spacings and fonts fixed

--- a/src/app/components/carrousels/carrousel-mansion/carrousel-mansion.component.scss
+++ b/src/app/components/carrousels/carrousel-mansion/carrousel-mansion.component.scss
@@ -1,29 +1,28 @@
-swiper-container{
-    
-    swiper-slide{
-        margin-bottom: 25px;
-        .card{
-            width: 100%;
-            height: auto;
-            border-radius: 40px;
-            background: #F9F9F9;
-            padding: 40px;
-
-            .title{
-                color: #000;
-                font-size: 26px;
-                font-weight: 700;
-                line-height: 23px; 
-                letter-spacing: -0.05em;
-                margin-bottom: 15px;
-            }
-            .text{
-                color: #000;
-                font-size: 22px;
-                font-weight: 400;
-                line-height: 23px;
-                letter-spacing: -0.03em;
-            }
-        }
+swiper-container {
+  swiper-slide {
+    margin-bottom: 25px;
+    .card {
+      width: 100%;
+      height: auto;
+      border-radius: 40px;
+      background: #f9f9f9;
+      padding: 40px;
+      border: none;
+      .title {
+        color: #000;
+        font-size: 26px;
+        font-weight: 700;
+        line-height: 23px;
+        letter-spacing: -0.05em;
+        margin-bottom: 15px;
+      }
+      .text {
+        color: #000;
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 23px;
+        letter-spacing: -0.03em;
+      }
     }
+  }
 }
