--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -84,7 +84,7 @@
           height: 20px;
         }
         max-height: 20px;
-        margin-left: 15px;
+        // margin-left: 15px;
         &-shape {
           width: 20px;
           height: 20px;
@@ -97,7 +97,7 @@
       }
 
       .lang {
-        margin-right: 15px;
+        margin-right: 0px;
       }
     }
   }
