--- a/src/app/sections/magic-key-is-for-you-if/magic-key-is-for-you-if.component.scss
+++ b/src/app/sections/magic-key-is-for-you-if/magic-key-is-for-you-if.component.scss
@@ -34,7 +34,7 @@
 // mobile------------------------------------------------------------
 @media screen and (max-width: 450px) {
   .is-for-you-if-container {
-    width: 90%;
+    // width: 90%;
 
     .is-for-you-if-title {
       display: none;
