--- a/src/app/sections/one-book-one-community/one-book-one-community.component.scss
+++ b/src/app/sections/one-book-one-community/one-book-one-community.component.scss
@@ -222,6 +222,7 @@
           font-family: $font-sora;
           font-weight: 700;
           letter-spacing: -0.05em;
+          line-height: 46px;
           text-align: center;
         }
 
@@ -233,7 +234,7 @@
           margin-bottom: 10px;
           font-weight: 700;
           padding: 0;
-          // width: 275px;
+          width: 275px;
           margin: 0 auto;
           margin-top: 30px;
           margin-bottom: 30px;
@@ -250,7 +251,7 @@
         margin-top: 0px;
         width: 100%;
         img {
-          width: 90%;
+          width: 100%;
           margin-top: 80px;
         }
       }
@@ -261,7 +262,7 @@
       justify-content: space-between;
       width: 100%;
       margin: 50px 0;
-
+      // margin-left: 5%;
       &-content {
         width: 100%;
         height: auto;
@@ -273,11 +274,12 @@
         &-title {
           font-size: 2.4em;
           font-weight: 700;
+
           // width: 300px;
           padding: 0;
           line-height: 45px;
           margin: 50px 0 25px 0;
-          margin-left: 5%;
+          // margin-left: 5%;
         }
         &-subtitle {
           // width: 90%;
@@ -288,6 +290,7 @@
           padding: 0;
           line-height: $lineH-P-Mobile;
           margin-bottom: 100px;
+          // width: 275px;
         }
 
         .carrousel-privileges {
