--- a/src/app/sections/team/team.component.scss
+++ b/src/app/sections/team/team.component.scss
@@ -11,6 +11,7 @@
     font-size: 48px;
     font-family: $font-sora;
     letter-spacing: -0.05em;
+    line-height: 46px;
   }
 
   .team-subtitle {
@@ -133,6 +134,7 @@
       font-weight: 700;
       font-size: 2.4em;
       padding: 0;
+      line-height: 46px;
     }
 
     .team-subtitle {
