--- a/src/app/sections/what-is-debook/what-is-debook.component.scss
+++ b/src/app/sections/what-is-debook/what-is-debook.component.scss
@@ -74,6 +74,7 @@
       }
       .what-is-content-numberAndtitleDescription {
         font-family: $font-inter;
+        font-weight: 400;
         font-size: 14px;
         text-align: start;
         color: $gray;
@@ -151,7 +152,7 @@
       justify-content: center;
       margin-top: 0px;
       padding: 0;
-
+      gap: 0;
       /*.what-is-logo-container-mobile{
                 display: flex;
                 justify-content: center;
@@ -201,12 +202,14 @@
           width: 239px;
           margin: 0 auto;
           margin-top: 20px;
+          line-height: 28px;
         }
         .what-is-content-numberAndtitleDescription {
           text-align: center;
-          width: 90%;
-          margin: 0 auto;
+          // width: 90%;
+          margin: 0;
           margin-top: 20px;
+          font-weight: 400;
           font-size: 1em;
           letter-spacing: -0.03em;
 
@@ -220,8 +223,8 @@
       .what-is-content-group-right {
         padding-left: 0 !important;
         padding-right: 0px;
-        // margin-top: 50px;
-        margin-top: 0px;
+        margin-top: 50px;
+        // margin-top: 0px;
         .what-is-content-numberAndtitle {
           padding: 0;
           width: 100%;
